tests/unit/default/syntax-error/003-drop.e.t
---- IN ----
-
---- OUT ----
---- ERR ----
syntax: expected <ddl-statement> after `-` instead of EOL at position 1 - at line 1
---- EXIT ----
1
